clusters/k3s-cluster/immich/microservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-microservices
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-microservices
  template:
    metadata:
      labels:
        app: immich-microservices
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
      containers:
        - name: immich-microservices
          image: ghcr.io/immich-app/immich-server:v2.7.5
          volumeMounts:
            - name: upload
              mountPath: /data
              subPath: data
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "8"
              memory: 6Gi
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: immich-data
