clusters/k3s-cluster/immich/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v2.7.5
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: upload
              mountPath: /data
              subPath: data
          readinessProbe:
            tcpSocket:
              port: 2283
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 2283
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: immich-data
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  type: LoadBalancer
  selector:
    app: immich-server
  ports:
    - port: 2283
      targetPort: 2283
