clusters/k3s-cluster/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
spec:
  ingressClassName: traefik
  rules:
    - host: immich.christou.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
  tls:
    - hosts:
        - immich.christou.cloud
